# agent-tune-kit

./: .gitignore  AGENTS.md  README.en.md  README.md  README.zh-CN.md  pyproject.toml
.codex-plugin/: plugin.json
docs/: codex_agent_tuning_prd.md  shared-versioning-and-confirmation.md  skill-template-pack-usage.md
scripts/: check-release.py  install_plugin.py  publish-pypi.sh  publish-release.py  release-version.py  release-version.sh  validate_skill_pack.py
skills/agent-tuning-apply-tuning/: SKILL.md
skills/agent-tuning-filter-abnormal-llm/: SKILL.md
skills/agent-tuning-filter-abnormal-rules/: SKILL.md
skills/agent-tuning-generate-runner/: SKILL.md
skills/agent-tuning-report/: SKILL.md
skills/agent-tuning-start/: SKILL.md
skills/atk-apply/: SKILL.md
skills/atk-filter/: SKILL.md
skills/atk-filter-rules/: SKILL.md
skills/atk-find-failures/: SKILL.md
skills/atk-find-failures-by-rule/: SKILL.md
skills/atk-init/: SKILL.md
skills/atk-init-failure-rule/: SKILL.md
skills/atk-report/: SKILL.md
skills/atk-run/: SKILL.md
skills/atk-setup/: SKILL.md
skills/atk-start/: SKILL.md
skills/atk-status/: SKILL.md
skills/atk-tune/: SKILL.md
skills/atk-visualize-failures/: SKILL.md
skills/atk-visualize-failures/assets/: app.js  page.html  styles.css
skills/atk-visualize-failures/scripts/: generate_failure_browser.py
src/agent_tune_kit/: __init__.py  cli.py  installer.py
templates/.atk/runner/: eval_runner.py.md  failure_rule.py.md  filter_abnormal.py.md  find_failures_by_rule.py.md  test_runner.py.md
templates/agent-tuning/runner/: filter_abnormal.py.md  test_runner.py.md
tests/: test_generate_failure_browser.py  test_install_plugin.py  test_release_scripts.py  test_runner_template_row_logging.py
